@@ -1,6 +1,8 @@
 AUX calculate-server-2.1.5-r2.patch 513 RMD160 bdbf1e6568dc70c804cbff8199d7a0b28ab56f5a SHA1 601e4746b15c0ca625d5e7253853f86e4c183f3d SHA256 cd58cb981385e4a13862b03348383b6f05cf685b6fd5aa35fc7964dac3c7a2c0
 DIST calculate-server-2.1.5.tar.bz2 151750 RMD160 f34df55deb04d4f324425c3c6b0a6b3ff570e276 SHA1 39ce789cf80d82e0e99d02498ab6bf0b3e25ea28 SHA256 209b9c3a1a46431504c032406aa19eb224390ad1ab3ab2ecb5b1bc9467ce7804
+DIST calculate-server-2.1.6.tar.bz2 154350 RMD160 d9b857fc20e963cee015ffb285bbbb68cf0da133 SHA1 dda2fa50f319f7b4cf011dd90dea6ac0fe1c068e SHA256 2c2e0880d5ae997717e4fc9da7f1536c650191f1087b0fc00247e75395b9e8ab
 EBUILD calculate-server-2.1.5-r2.ebuild 5261 RMD160 1f74308ac9eb78422c1530967ca0f82cf68a6198 SHA1 b4a1d8412ef801c9a48a46310a554d0c0942cea3 SHA256 6c0fe4e6b269e5c892e8420d123deaf36612a92a921873586f215b5f91cecddf
+EBUILD calculate-server-2.1.6.ebuild 5110 RMD160 f46a82a6f87291b5d74cd2e86ce0474b6a8f9c44 SHA1 12459fb11bf2e8a901147be20938740fe1bd6fa2 SHA256 16f48103352eea5c0d2c3fd3201c64362cb5b78d06816e81124ea96aadf87ed4
 EBUILD calculate-server-9999.ebuild 1146 RMD160 45048c2d855ea994b88bffa89be8e9c093bc250f SHA1 11966199679b627b4267aba0bfcff93cd3de1920 SHA256 94a2d1bc05aaa0e4e19ec782c4dac4226dd682782b809aee939c9944a083866c
-MISC ChangeLog 1541 RMD160 710b82f52fc115e18447035e0e5b9f3e5b02503d SHA1 ad6b0ab7c302d892b34f1f03c84b5881de0a955b SHA256 af3f1471c65cd938b9e2c82d479350c4a8bfecd66953ed93e18963e68a134852
+MISC ChangeLog 1720 RMD160 e6804abb5974e2d231e4f3c397fa9603d006e41b SHA1 90c1d0d9030256efb226aed3e13794fff5223f87 SHA256 cfb481caa7515bd4f1fa9c4255ae6a10a0690e6cc88507b13c6274f81afa3d2e
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
