@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.6 (01 Dec 2009)
+
+  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.6.ebuild:
+  Ebuild for new version of calculate-server.
+
   30 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   -files/calculate-server-2.1.4-r1.patch:
   Remove unnecessary patch.
